# MUD

./: .gitignore  1_cmake.bat  2_build.bat  CMakeLists.txt  README.md  ollama_proxy  package-lock.json
client/: client.cpp  mud_client.cpp
data/: commands.json  items.json  llm_config.json  llm_prompt.txt  nlp_patterns.json  npcs.json
data/maps/: north_road.json  south_road.json  town_square.json
include/commands/: command_handler.hpp  command_manager.hpp
include/llm/: llm_api_client.hpp
include/network/: chat_participant.hpp  file.hpp  server.hpp  session.hpp
include/nlp/: natural_language_processor.hpp
include/players/: player.hpp
include/utils/: color.hpp  logger.hpp  text_format.hpp
include/world/: item.hpp  item_manager.hpp  npc.hpp  npc_manager.hpp  room.hpp  world.hpp
src/: main.cpp
src/commands/: command_handler.cpp  command_manager.cpp
src/llm/: llm_api_client.cpp
src/network/: file.cpp  server.cpp  session.cpp
src/nlp/: natural_language_processor.cpp
src/players/: player.cpp
src/utils/: logger.cpp  text_format.cpp
src/world/: item_manager.cpp  npc_manager.cpp  room.cpp  world.cpp
